<resources>
    <string name="app_name" translatable="false">#Caller ID</string>
    <string name="app_name_use" translatable="false">Caller ID</string>

    <string name="setting">Settings</string>
    <string name="blocking">Blocking</string>
    <string name="contacts">Contacts</string>
    <string name="block_setting">Block Setting</string>
    <string name="my_blocklist_numbers">My Blocklist Numbers</string>
    <string name="commonly_blocked_numbers">Commonly blocked numbers</string>
    <string name="calls_in_block_list">Calls in block list</string>
    <string name="block_calls_not_in_contacts">Block calls not in contacts</string>
    <string name="not_activated_yet">Not activated yet</string>
    <string name="block_hidden_numbers">Block hidden numbers</string>
    <string name="home">Recent</string>
    <string name="more">Setting</string>
    <string name="edit_profile">Edit</string>
    <string name="copied_numbers">Copied Numbers</string>
    <string name="rate_us">Rate Us</string>
    <string name="language">Language</string>
    <string name="country_region">Country / Region</string>
    <string name="caller_id">Caller ID</string>
    <string name="keypad_dial_tone">Keypad Dial - Tone</string>
    <string name="share">Share</string>
    <string name="check_update">Check Update</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="submit">Submit</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="update">Update</string>
    <string name="message">Message</string>
    <string name="feedback">Feedback</string>
    <string name="search_country">Search Country</string>
    <string name="search_language">Search Language</string>
    <string name="let_me_recommend_you">best callerID app</string>
    <string name="no_blocked_number">No Blocked Number</string>
    <string name="view_contacts">View Contacts</string>
    <string name="you_do_not_have_any_block_numbers">You do not have any block numbers.</string>
    <string name="you_will_be_logged_out_of_your_account_do_you_want_to_proceed">You will be logged out of your account. Do you want to proceed?</string>
    <string name="cancel">Cancel</string>
    <string name="block">Block</string>
    <string name="no_calls">No Calls</string>
    <string name="favourites">Favourites</string>
    <string name="favourite">Favourite</string>
    <string name="recent_calls">Recent Calls</string>
    <string name="make_sure_to_check_back_to_see_your_call_log_and_suggested_contacts">Make sure to check back to see your call log and suggested contacts</string>
    <string name="delete">Delete</string>
    <string name="all_calls_will_be_delete_are_you_sure_you_want_to_delete_all_calls">All calls will be delete. Are you sure you want to delete all calls?</string>
    <string name="they_will_be_able_to_call_and_message_you_again">They will be able to call and message you again.</string>
    <string name="unblock">Unblock</string>
    <string name="they_will_no_longer_be_able_to_call_or_message_you">Are you sure you want to block this number?</string>
    <string name="logout">Logout</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="quickly_call_your_n_favourite_contacts">Quickly call your\n favourite contacts</string>
    <string name="delete_all_calls">Delete All Calls</string>
    <string name="delete_call_permanently">Delete phone number</string>
    <string name="all_call_logs_associated_with_the_selected_number_will_be_permanently_deleted">All call logs associated with the selected number will be permanently deleted.</string>
    <string name="call_details">Call Details</string>
    <string name="incoming_call">Incoming Calls</string>
    <string name="total_call">Total Call</string>
    <string name="missed_call">Missed Calls</string>
    <string name="outgoing_call">Outgoing Calls</string>
    <string name="call_history">Call History</string>
    <string name="clear_all">Clear All</string>
    <string name="keypad">Keypad</string>
    <string name="search">Search</string>
    <string name="missed_calls">Missed Calls</string>
    <string name="outgoing_calls">Outgoing Calls</string>
    <string name="incoming_calls">Incoming Calls</string>
    <string name="all_call">All Calls</string>
    <string name="permission_amp_your_data"><![CDATA[Permission & your data]]></string>
    <string name="phone_calls">Phone Calls</string>
    <string name="to_verify_your_phone_number_and_provide_helpful_features_like">To verify your phone number and provide helpful features like identifying unknown callers and enable in-app calling, we need to collect your phone number and call data.</string>
    <string name="to_show_you_when_a_contact_is_calling_you_and_help_identify_unknown">To show you when a contact is calling you and help identify unknown numbers, we need access to your contacts. <b>Your contacts list stays on your phone and is not shared with Caller ID</b></string>
    <string name="to_help_identify_unknown_callers_in_your_call_history_we_collect_call_log_data">To help identify unknown callers in your call history, we collect call log data.</string>
    <string name="you_re_in_control">You’re in control</string>
    <string name="you_have_full_control_over_all_permissions_and_can_">You have full control over all permissions and can adjust them anytime in the app’s privacy center.</string>
    <string name="continue_">Continue</string>
    <string name="call_logs">Call Logs</string>
    <string name="decline">Decline\n</string>
    <string name="accept">Accept\n</string>
    <string name="allow_permission">Allow Permission</string>
    <string name="in_order_wo_work_properly_caller_id">In order wo work properly, Caller ID needs permission to access your Phone permission to access your Contacts.</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="say_goodbye_to_unknown_caller">Say goodbye to unknown caller</string>
    <string name="preferences">preferences</string>
    <string name="learn_the_basics_in_just_a_few_steps">Learn the basics in just a few steps.</string>
    <string name="english_usa">English(USA)</string>
    <string name="change_language">Change Language</string>
    <string name="my_block_list">My block list</string>
    <string name="general">general</string>
    <string name="find_number">Find Number</string>
    <string name="no_contact_found">No Contact Found\n</string>
    <string name="mobile">Mobile\n</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="meet">Meet</string>
    <string name="view_all">View All\n</string>
    <string name="identified_by_callerid">Identified by CallerID</string>
    <string name="enable_overlay">Enable Overlay</string>
    <string name="go_back_to_settings">Go Back to Settings</string>
    <string name="almost_done">Almost done</string>
    <string name="set_up_live_caller_id_by_enabling_draw_over_other_apps_in_your_system_settings">Set up live Caller ID by enabling “Draw over other apps” in your system settings</string>
    <string name="why_do_we_need_this_permission">Why do we need this permission?</string>
    <string name="overlay_permission_text">     <![CDATA[ To display caller names and warn you about spam before you answer, we need the <font color=\'#20B56E\'><b>‘Draw Over Other Apps’</b></font> permission, as required by Google.]]></string>
    <string name="one_last_step">One last step!</string>
    <string name="almost_there_allow_this_final_permission_to_enable_caller_id_and_spam_detection_">Almost there! Allow this final permission to enable Caller ID and spam detection. Once granted, you’ll unlock the full app experience.</string>
    <string name="why">Why?</string>
    <string name="skip">Skip</string>
    <string name="please_open_settings_go_to_permissions_and_allow_them">Please open settings, go to permissions and allow them.</string>
    <string name="you_have_denied_permissions_forcefully">You have denied permissions forcefully</string>
    <string name="permission">“Permission”</string>
    <string name="for_each_permission">for each permission</string>
    <string name="go_to_setting">Go to setting</string>
    <string name="spam_call">Spam Calls</string>
    <string name="unblock_str">Are you sure you want to unblock this number?</string>

    <string name="no_block_list_found">No block Found\n</string>


    <string name="privacy_policy_url" translatable="false">https://sportsmaster.co.in/policy_files/callerID.html</string>
    <string name="caller_id_lets_you_decide_before_answering">Caller ID lets you decide before answering</string>

</resources>