<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.FeedbackActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:background="@color/stock">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llToolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_140sdp"
            android:background="@color/purple"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/purple">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgBack"
                    android:layout_width="@dimen/_26sdp"
                    android:layout_height="@dimen/_26sdp"
                    android:src="@drawable/ic_arrow_left" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:fontFamily="@font/sora_medium"
                    android:text="@string/feedback"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16sdp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_60sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:background="@drawable/dialog_bg"
            android:orientation="vertical">



            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="@dimen/_10sdp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:background="@drawable/edit_text_background">

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/enter_your_name"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:padding="@dimen/_10sdp"
                    android:textSize="@dimen/_13sdp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:src="@drawable/user" />

            </androidx.appcompat.widget.LinearLayoutCompat>


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="@dimen/_10sdp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:background="@drawable/edit_text_background">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editEmail"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/enter_your_email"
                    android:padding="@dimen/_10sdp"
                    android:maxLines="1"
                    android:inputType="textEmailAddress"
                    android:textSize="@dimen/_13sdp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:src="@drawable/sms" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="@dimen/_10sdp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:text="@string/message"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:hint="@string/enter_your_message"
                android:padding="@dimen/_10sdp"
                android:maxLines="8"
                android:minLines="4"
                android:gravity="start"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:inputType="textMultiLine"
                android:textSize="@dimen/_12sdp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtUpdate"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_margin="@dimen/_20sdp"
            android:text="@string/submit"
            android:fontFamily="@font/sora_medium"
            android:background="@drawable/background_key"
            android:backgroundTint="@color/purple"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_gravity="bottom"
            android:textSize="@dimen/_14sdp" />

    </FrameLayout>


</androidx.appcompat.widget.LinearLayoutCompat>