<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/llSubMainDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:background="@drawable/white_rectangle"
        android:elevation="@dimen/_3sdp"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_10sdp"
            android:src="@drawable/ic_logout_new" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/sora_semibold"
            android:text="@string/logout"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_margin="@dimen/_10sdp"
            android:background="#D8DDEA" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:layout_toRightOf="@+id/imgLanguage"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center_vertical"
            android:text="@string/you_will_be_logged_out_of_your_account_do_you_want_to_proceed"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_margin="@dimen/_10sdp"
            android:background="#D8DDEA" />


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginVertical="@dimen/_10sdp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtNo"
                android:layout_width="0dp"
                android:layout_height="@dimen/_36sdp"
                android:layout_weight="1"
                android:background="@drawable/background_key"
                android:backgroundTint="@color/stock"
                android:fontFamily="@font/sora_medium"
                android:gravity="center"
                android:text="@string/no"
                android:textColor="@color/gray1"
                android:textSize="@dimen/_14sdp" />

            <View
                android:layout_width="@dimen/_10sdp"
                android:layout_height="match_parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtYes"
                android:layout_width="0dp"
                android:layout_height="@dimen/_36sdp"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:background="@drawable/background_key"
                android:backgroundTint="@color/purple"
                android:fontFamily="@font/sora_medium"
                android:gravity="center"
                android:text="@string/yes"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />


        </androidx.appcompat.widget.LinearLayoutCompat>

    </LinearLayout>

</RelativeLayout>