<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/llSubMainDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:background="@drawable/white_rectangle"
        android:elevation="@dimen/_3sdp"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_90sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_10sdp"
            android:src="@drawable/ic_block_contact" />



        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:layout_toRightOf="@+id/imgLanguage"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/they_will_no_longer_be_able_to_call_or_message_you"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp" />




        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginVertical="@dimen/_11sdp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtCancel"
                android:layout_width="0dp"
                android:layout_height="@dimen/_34sdp"
                android:layout_weight="1"
                android:background="@drawable/edit_text_background_"
                android:backgroundTint="@color/btn_bg"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/gray1"
                android:textSize="@dimen/_12sdp" />

            <View
                android:layout_width="@dimen/_10sdp"
                android:layout_height="match_parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtUnblock"
                android:layout_width="0dp"
                android:layout_height="@dimen/_34sdp"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:background="@drawable/edit_text_background_"
                android:backgroundTint="@color/purple"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:text="@string/block"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />


        </androidx.appcompat.widget.LinearLayoutCompat>

    </LinearLayout>

</RelativeLayout>